[package]
name = "dbdashmap"
version = "0.1.0"
authors = ["CARAMAo <pasqcaramante@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash="0.6.2"
lazy_static = "1.3.0"
hashbrown = "0.3"
num_cpus = "1.13.0"
crossbeam ="0.8.0"